--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
